// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CellHeader /> Ascending story renders snapshot 1`] = `
<table>
  <tbody>
    <tr>
      <th
        class="css-x40omn"
        direction="asc"
      >
        <div
          class="css-rm9mvq"
        >
          <span>
            Header
          </span>
          <button
            aria-label="Change sort direction from ascending to descending"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-xhp77i-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <div
              class="css-1ft6wgl"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1i58sq6-MuiSvgIcon-root"
                data-jest-file-name="IconChevronUpSmall.svg"
                data-jest-svg-name="IconChevronUpSmall"
                data-testid="IconChevronUpSmall"
                fillcontrast="white"
                focusable="false"
                viewBox="0 0 14 14"
              />
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </th>
    </tr>
  </tbody>
</table>
`;

exports[`<CellHeader /> Test story renders snapshot 1`] = `
<table>
  <tbody>
    <tr>
      <th
        class=" css-1v6z816"
        data-mui-internal-clone-element="true"
        data-testid="CellHeader"
      >
        <div
          class="css-wg04tn"
        >
          <span>
            Header
          </span>
          <button
            aria-label="Change sort direction from descending to ascending"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1c9gy53-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <div
              class="css-1ft6wgl"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1i58sq6-MuiSvgIcon-root"
                data-jest-file-name="IconChevronDownSmall.svg"
                data-jest-svg-name="IconChevronDownSmall"
                data-testid="IconChevronDownSmall"
                fillcontrast="white"
                focusable="false"
                viewBox="0 0 14 14"
              />
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </th>
    </tr>
  </tbody>
</table>
`;
